--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,4 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-
+.transition-opacity {
+    transition-property: opacity;
+  }
+  
+  .duration-1000 {
+    transition-duration: 1000ms;
+  }
+  
+  .opacity-0 {
+    opacity: 0;
+  }
+  
+  .opacity-100 {
+    opacity: 1;
+  }
+  
