Added Category Section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,4 +17,11 @@
   .opacity-100 {
     opacity: 1;
   }
+  .hide-scrollbar {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE and Edge */
+  }
   
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, and Opera */
+  }
