--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: #E4C07C;
+}
+
 .transition-opacity {
     transition-property: opacity;
   }
