--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+/* body {
+  background-color: #A8CD9F;
+} */
 body {
-  background-color: #E4C07C;
+  background-image: conic-gradient(var(--conic-position), var(--tw-gradient-stops));
 }
 
 .transition-opacity {
